@startuml Alarm Engine – Class Diagram
title Alarm Engine · Class Diagram

skinparam defaultFontName Roboto
skinparam defaultFontSize 12
skinparam classAttributeIconSize 0
skinparam backgroundColor #FAFCFA

skinparam class {
  BackgroundColor #E8F5E9
  BorderColor     #2E7D32
  HeaderBackgroundColor #C8E6C9
}

' ───────────────────────────────────
'  Foreground Service
' ───────────────────────────────────

class AlarmEvaluatorService <<ForegroundService>> {
  - repo : IAlarmRepository
  - evaluators : Map<String, ConditionEvaluator>
  - notifCtrl : NotificationController
  - scope : CoroutineScope
  --
  + onCreate()
  + onDestroy()
  --
  - observeEnabledAlarms()
  - launchEvalLoop(alarm: Alarm)
  - evaluateAlarm(alarm: Alarm): Boolean
  - handleTrigger(alarm: Alarm)
}

' ───────────────────────────────────
'  Condition Evaluators (Strategy)
' ───────────────────────────────────

interface ConditionEvaluator <<interface>> {
  + evaluate(condition: Condition): suspend Boolean
}

class WeatherEvaluator {
  - fetcher : ExternalDataFetcher
  + evaluate(condition: Condition): suspend Boolean
}

class DeviceEvaluator {
  - context : Context
  + evaluate(condition: Condition): suspend Boolean
}

class TimeEvaluator {
  + evaluate(condition: Condition): suspend Boolean
}

class LocationEvaluator {
  - fetcher : ExternalDataFetcher
  + evaluate(condition: Condition): suspend Boolean
}

class ScheduleEvaluator {
  + evaluate(condition: Condition): suspend Boolean
}

class CustomEvaluator {
  - fetcher : ExternalDataFetcher
  + evaluate(condition: Condition): suspend Boolean
}

' ───────────────────────────────────
'  Notification Controller
' ───────────────────────────────────

class NotificationController {
  - context : Context
  - mediaPlayer : MediaPlayer
  - tts : TextToSpeech
  --
  + showPing(alarm: Alarm)
  + showRing(alarm: Alarm)
  + showReadout(alarm: Alarm)
  + dismiss(alarmId: Long)
}

' ───────────────────────────────────
'  External Data Fetcher
' ───────────────────────────────────

class ExternalDataFetcher {
  - httpClient : HttpClient
  - cache : Map<String, CacheEntry>
  --
  + fetchWeather(lat: Double, lon: Double): WeatherData
  + fetchLocation(): LocationData
  --
  - isCacheValid(key: String, refreshFreq: RefreshFrequency): Boolean
}

class CacheEntry <<data class>> {
  + data : Any
  + timestamp : Long
}

class WeatherData <<data class>> {
  + temperature : Double
  + condition : String
  + humidity : Int
  + windSpeed : Double
}

class LocationData <<data class>> {
  + latitude : Double
  + longitude : Double
  + accuracy : Double
}

' ───────────────────────────────────
'  Interface (external dependency)
' ───────────────────────────────────

interface IAlarmRepository <<interface>> {
  + getAll(): Flow<List<Alarm>>
  + setEnabled(ids: List<Long>, on: Boolean): suspend Unit
}

' ───────────────────────────────────
'  Relationships
' ───────────────────────────────────

AlarmEvaluatorService --> IAlarmRepository : observe & disable
AlarmEvaluatorService --> NotificationController : trigger
AlarmEvaluatorService --> "6" ConditionEvaluator : strategy dispatch

ConditionEvaluator <|.. WeatherEvaluator
ConditionEvaluator <|.. DeviceEvaluator
ConditionEvaluator <|.. TimeEvaluator
ConditionEvaluator <|.. LocationEvaluator
ConditionEvaluator <|.. ScheduleEvaluator
ConditionEvaluator <|.. CustomEvaluator

WeatherEvaluator --> ExternalDataFetcher
LocationEvaluator --> ExternalDataFetcher
CustomEvaluator --> ExternalDataFetcher

ExternalDataFetcher ..> CacheEntry : stores
ExternalDataFetcher ..> WeatherData : returns
ExternalDataFetcher ..> LocationData : returns

@enduml
